--- a/navigation/informationItem.html
+++ b/navigation/informationItem.html
@@ -58,10 +58,11 @@
                                     <a href="#">HUẤN LUYỆN VIÊN</a>
                                     <a href="#">CỬA HÀNG WHEY</a>
                                     <a href="../chatbox.html">CHAT ONLINE</a>
-                              </div>
+                                </div>
                             </div>
                         </li>
-                        <li><a class="header__inner__navigation__sevice" href="./promotion.html"><span>KHUYẾN MÃI</span></a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./promotion.html"><span>KHUYẾN
+                                    MÃI</span></a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
@@ -72,52 +73,54 @@
                 <div class="header__inner__menu">
                     <div class="bt_dropdown">
                         <a class="header__inner__menu__bt" href="#" onclick="yourFunction(event)">
-                    <div class="bt_dropdown">
-                        <a class="header__inner__menu__bt" href="#" onclick="yourFunction(event)">
-                            <i class='bx bx-menu'></i>
-                        </a>
-                        <div class="content">
-                        <div class="content">
-                            <div class="logo">
-                                <a class="logo__inner" href="">
-                                    GYM<span>Z</span>
+                            <div class="bt_dropdown">
+                                <a class="header__inner__menu__bt" href="#" onclick="yourFunction(event)">
+                                    <i class='bx bx-menu'></i>
                                 </a>
-                                <a class="logo__inner" href="">
-                                    GYM<span>Z</span>
-                                </a>
-                                <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
+                                <div class="content">
+                                    <div class="content">
+                                        <div class="logo">
+                                            <a class="logo__inner" href="">
+                                                GYM<span>Z</span>
+                                            </a>
+                                            <a class="logo__inner" href="">
+                                                GYM<span>Z</span>
+                                            </a>
+                                            <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
+                                        </div>
+                                        <a href="../index.html">
+                                            <i class='bx bxs-home'></i>
+                                            <span class="noidung__text1">
+                                                TRANG CHỦ
+                                            </span>
+                                        </a>
+                                        <a href="./forum.html">
+                                            <i class='bx bx-world'></i>
+                                            <span class="noidung__text1">
+                                                DIỄN ĐÀN
+                                            </span>
+                                        </a>
+                                        <a href="#">
+                                            <i class='bx bxs-file'></i>
+                                            <span class="noidung__text1">
+                                                DỊCH VỤ
+                                            </span>
+                                        </a>
+                                        <a href="./promotion.html">
+                                            <i class='bx bxs-purchase-tag'></i>
+                                            <span class="noidung__text1">
+                                                KHUYẾN MÃI
+                                            </span>
+                                        </a>
+                                        <a href="#">
+                                            <i class='bx bx-code-alt'></i>
+                                            <span class="noidung__text1">
+                                                TẬP THỬ MIỄN PHÍ
+                                            </span>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
-                            <a href="../index.html">
-                                <i class='bx bxs-home'></i>
-                                <span class="noidung__text1">
-                                    TRANG CHỦ
-                                </span>
-                            </a>
-                            <a href="./forum.html">
-                                <i class='bx bx-world' ></i>
-                                <span class="noidung__text1">
-                                    DIỄN ĐÀN
-                                </span>
-                            </a>
-                            <a href="#">
-                                <i class='bx bxs-file' ></i>
-                                <span class="noidung__text1">
-                                    DỊCH VỤ
-                                </span>
-                            </a>
-                            <a href="./promotion.html">
-                                <i class='bx bxs-purchase-tag' ></i>
-                                <span class="noidung__text1">
-                                    KHUYẾN MÃI
-                                </span>
-                            </a>
-                            <a href="#">
-                                <i class='bx bx-code-alt' ></i>
-                                <span class="noidung__text1">
-                                    TẬP THỬ MIỄN PHÍ
-                                </span>
-                            </a>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -342,10 +345,8 @@
                 </div>
             </div> -->
         </div>
-    </div>
-    </div>
-    <!--   NGUYEN THI VAN -->
-    <!-- <div class="footer">
+        <!--   NGUYEN THI VAN -->
+        <!-- <div class="footer">
             <div class="footer__select">
                 <div class="footer__colum1">
                     <div class="footer__colum1__inner">
@@ -499,7 +500,7 @@
 
     <script src="./index.js"></script>
     <script src="../navigation_javascript/menuv2.js"></script>
-    <script  src="../navigation_javascript/informationItem.js" type="text/babel"></script>
+    <script src="../navigation_javascript/informationItem.js" type="text/babel"></script>
 
 </body>
 
