--- a/index.html
+++ b/index.html
@@ -159,27 +159,39 @@
                 <div class="container__service__img hidden">
                     <div class="container__service__img__items container__service__img1">
                         <img src="./img/services/sv1.jpg" alt="">
-                        <p>Tập luyện với Huấn luyện viên cá nhân, hiệu quả nhân ba</p>
+                        <span>Tập luyện với Huấn luyện viên cá nhân</span>
+                        <a href="./navigation/train.html" class="container__service__img__items__link">Xem thêm
+                        </a>
                     </div>
                     <div class="container__service__img__items container__service__img2">
                         <img src="./img/services/sv2.jpg">
-                        <p>Cơ hội trải nghiệm 40 bộ môn yoga cơ bản, nâng cao</p>
+                        <span>Cơ hội trải nghiệm 40 bộ môn yoga</span>
+                        <a href="./navigation/train.html" class="container__service__img__items__link">Xem thêm
+                        </a>
                     </div>
                     <div class="container__service__img__items container__service__img3">
                         <img src="./img/services/sv3.jpg" alt="">
-                        <p>Giải tỏa căng thẳng với hơn 10 thể loại Group đa dạng</p>
+                        <span>Tỏa căng thẳng với hơn 10 thể loại Group</span>
+                        <a href="./navigation/train.html" class="container__service__img__items__link">Xem thêm
+                        </a>
                     </div>
                     <div class="container__service__img__items container__service__img4">
                         <img src="./img/services/sv4.jpg" alt="">
-                        <p>Cùng nhau đạp xe để nâng cao sức khỏe</p>
+                        <span>Cùng nhau đạp xe để nâng cao sức khỏe</span>
+                        <a href="./navigation/train.html" class="container__service__img__items__link">Xem thêm
+                        </a>
                     </div>
                     <div class="container__service__img__items container__service__img5">
                         <img src="./img/services/sv5.jpg" alt="">
-                        <p>Có những dạng Dance như: Zumba, Sexy Dance </p>
+                        <span>Có những dạng Dance như: Zumba, Sexy Dance </span>
+                        <a href="./navigation/train.html" class="container__service__img__items__link">Xem thêm
+                        </a>
                     </div>
                     <div class="container__service__img__items container__service__img5">
                         <img src="./img/services/sv5.jpg" alt="">
-                        <p>Có những dạng Dance như: Zumba, Sexy Dance </p>
+                        <span>Có những dạng Dance như: Zumba, Sexy Dance </span>
+                        <a href="./navigation/train.html" class="container__service__img__items__link">Xem thêm
+                        </a>
                     </div>
                 </div>
             </div>
